--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
   <ul class="social-list">
     <li class="social-item"><a href="https://github.com/light-candy"><img class="social-icon" src="./icons/github.svg"><p class="link-text">Github</p></a></li>
  <li class="social-item"><a href="mailto:schamanova.sv@gmail.com"><img class="social-icon" src="./icons/email.svg"><p class="link-text">Email</p></a></li>
-     <li class="social-item"><a href="https://t.me/triiruki"><img class="social-icon" src="./icons/telegram.svg"><p class="link-text">Telegram</p></a></li>
+     <li class="social-item"><a href="https://tglink.ru/triiruki"><img class="social-icon" src="./icons/telegram.svg"><p class="link-text">Telegram</p></a></li>
       <li class="social-item"><a href="https://wa.me/89099036736"><img class="social-icon" src="./icons/whatsapp.svg"><p class="link-text">Whatsapp</p></a></li>
        <li class="social-item"><a href="https://vk.com/light.candy"><img class="social-icon" src="./icons/vk.svg"><p class="link-text">VK</p></a></li>
         <li class="social-item"><a href=""><img class="social-icon" src="./icons/cv.svg"><p class="link-text">hh.ru</p></a></li>
