--- a/eng.html
+++ b/eng.html
@@ -14,45 +14,38 @@
     <div class="container">
       <div class="tapestry">
         <hr>
-        <h2 class="title">Светлана Шаманова</h2>
-        <h3 class="subtitle">в поисках работы</h3>
+        <h2 class="title">Svetlana Shamanova</h2>
+        <h3 class="subtitle">Enters The Job Market</h3>
         <hr>
-        <p class="main-text">Я живу в Москве и осваиваю frontend.
-        Мне нужен опыт и работы для портфолио, поэтому я с радостью сверстаю для вас landing page
-        за символическую оплату. Я работаю быстро и всегда вовремя отвечаю на
-        сообщения. <a href="">Здесь</a> и ниже можно посмотреть, что я уже умею, чему
-        учусь сейчас и чему планирую научиться.
+        <p class="main-text">Hi! I am a beginner frontend-developer living in
+        Moscow, Russia.
+        Right now I really need some experience and works to put in my
+        portfolio. I work fast, answer messages swiftly and always stay in
+        touch. <a href="">Here</a>
+are some things I plan to learn in the nearest future.
+        <h3 class="heading">My skills</h3>
+        <hr>
 
-        <h3 class="heading">Навыки и знания</h3>
-        <hr>
-<div>
-        <h3 class="heading-2">Английский язык</h3>
-        <p class="abstract">самостоятельно разбираюсь в документации</p>
-</div>
-<div>
-<h3 class="heading-2">Оконченное высшее образование</h3>
-<p class="abstract">НИУ ВШЭ, психология, бакалавриат, 2016</p>
-</div>
 <div class="features">
 <div class="feature-card">
   <img class="feature-icon" src="./icons/browser.svg">
 <div class="feature-caption">
   <h3 class="feature-heading">HTML5 + CSS3</h3>
-  <p class="feature-text">Flexbox/CSSGrid/БЭМ</p>
+  <p class="feature-text">Flexbox/CSSGrid/BEM</p>
 </div>
 </div>
 <div class="feature-card">
   <img class="feature-icon" src="./icons/sass.svg">
 <div class="feature-caption">
   <h3 class="feature-heading">Sass/Scss</h3>
-  <p class="feature-text">препроцессор стилей</p>
+  <p class="feature-text">styless preprocessor</p>
 </div>
 </div>
 <div class="feature-card">
   <img class="feature-icon" src="./icons/gulp.svg">
 <div class="feature-caption">
   <h3 class="feature-heading">Gulp</h3>
-  <p class="feature-text">автоматизатор задач</p>
+  <p class="feature-text">task-manager</p>
 </div>
 </div>
 <div class="feature-card">
@@ -71,12 +64,13 @@
       <li class="social-item"><a href="https://wa.me/89099036736"><img class="social-icon" src="./icons/whatsapp.svg"><p class="link-text">Whatsapp</p></a></li>
        <li class="social-item"><a href="https://vk.com/light.candy"><img class="social-icon" src="./icons/vk.svg"><p class="link-text">VK</p></a></li>
         <li class="social-item"><a href=""><img class="social-icon" src="./icons/cv.svg"><p class="link-text">hh.ru</p></a></li>
-</ul></div>
-<div class="lang"><a href="./eng.html"><img class = "img-lang" src="./icons/united-kingdom.svg"></a></div>
-      </div>
-      <div class="hero">
+     </ul></div>
 
-      </div>
+
+<div class="lang-en"><a href="./index.html"><img class = "img-lang" src="./icons/russia.svg"></a></div>
+</div>
+<div class="hero">
+    </div>
     </div>
   </body>
   </html>
