tweaked font-size and padding

--- a/eng.html
+++ b/eng.html
@@ -17,7 +17,7 @@
         <h2 class="title">Svetlana Shamanova</h2>
         <h3 class="subtitle">Enters The Job Market</h3>
         <hr>
-        <p class="main-text">Hi! I am a beginner frontend-developer living in
+        <p class="main-text-eng">Hi! I am a beginner frontend-developer living in
         Moscow, Russia.
         Right now I really need some experience and works to put in my
         portfolio. I work fast, answer messages swiftly and always stay in
