add aria-hidden to pics, add plans, edit some text

--- a/eng.html
+++ b/eng.html
@@ -19,55 +19,62 @@
         <hr>
         <p class="main-text-eng">Hi! I am a beginner frontend-developer living in
         Moscow, Russia.
-        Right now I really need some experience and works to put in my
+        Right now I could really use some experience and works to put in my
         portfolio. I work fast, answer messages swiftly and always stay in
-        touch. <a href="">Here</a>
-are some things I plan to learn in the nearest future.
+        touch.</p>
         <h3 class="heading">My skills</h3>
         <hr>
 
 <div class="features">
 <div class="feature-card">
-  <img class="feature-icon" src="./icons/browser.svg">
+  <img class="feature-icon" src="./icons/browser.svg" aria-hidden="true">
 <div class="feature-caption">
   <h3 class="feature-heading">HTML5 + CSS3</h3>
   <p class="feature-text">Flexbox/CSSGrid/BEM</p>
 </div>
 </div>
 <div class="feature-card">
-  <img class="feature-icon" src="./icons/sass.svg">
+  <img class="feature-icon" src="./icons/sass.svg" aria-hidden="true">
 <div class="feature-caption">
   <h3 class="feature-heading">Sass/Scss</h3>
   <p class="feature-text">styless preprocessor</p>
 </div>
 </div>
 <div class="feature-card">
-  <img class="feature-icon" src="./icons/gulp.svg">
+  <img class="feature-icon" src="./icons/gulp.svg" aria-hidden="true">
 <div class="feature-caption">
   <h3 class="feature-heading">Gulp</h3>
   <p class="feature-text">task-manager</p>
 </div>
 </div>
 <div class="feature-card">
-  <img class="feature-icon" src="./icons/linux.svg">
+  <img class="feature-icon" src="./icons/linux.svg" aria-hidden="true">
   <div class="feature-caption">
   <h3 class="feature-heading">Linux</h3>
   <p class="feature-text">Git/Bash/Emacs/Vim</p>
   </div>
 </div>
 </div>
-<div class="social">
+<nav class="social">
   <ul class="social-list">
-    <li class="social-item"><a href="https://github.com/light-candy"><img class="social-icon" src="./icons/github.svg"><p class="link-text">Github</p></a></li>
- <li class="social-item"><a href="mailto:schamanova.sv@gmail.com"><img class="social-icon" src="./icons/email.svg"><p class="link-text">Email</p></a></li>
-     <li class="social-item"><a href="https://tglink.ru/triiruki"><img class="social-icon" src="./icons/telegram.svg"><p class="link-text">Telegram</p></a></li>
-      <li class="social-item"><a href="https://wa.me/89099036736"><img class="social-icon" src="./icons/whatsapp.svg"><p class="link-text">Whatsapp</p></a></li>
-       <li class="social-item"><a href="https://vk.com/light.candy"><img class="social-icon" src="./icons/vk.svg"><p class="link-text">VK</p></a></li>
-        <li class="social-item"><a href=""><img class="social-icon" src="./icons/cv.svg"><p class="link-text">hh.ru</p></a></li>
-     </ul></div>
+    <li class="social-item"><a href="https://github.com/light-candy"><img class="social-icon"
+    src="./icons/github.svg" role="button"><p class="link-text">Github</p></a></li>
+ <li class="social-item"><a href="mailto:schamanova.sv@gmail.com"><img class="social-icon"
+ src="./icons/email.svg" role="button"><p class="link-text">Email</p></a></li>
+     <li class="social-item"><a href="https://tglink.ru/triiruki"><img class="social-icon"
+     src="./icons/telegram.svg" role="button"><p class="link-text">Telegram</p></a></li>
+      <li class="social-item"><a href="https://wa.me/89099036736"><img class="social-icon"
+      src="./icons/whatsapp.svg" role="button"><p class="link-text">Whatsapp</p></a></li>
+       <li class="social-item"><a href="https://vk.com/light.candy"><img class="social-icon"
+       src="./icons/vk.svg" role="button"><p class="link-text">VK</p></a></li>
+        <li class="social-item"><a href=""><img class="social-icon"
+        src="./icons/cv.svg" role="button"><p class="link-text">hh.ru</p></a></li>
+     </ul></nav>
 
 
-<div class="lang-en"><a href="./index.html"><img class = "img-lang" src="./icons/russia.svg"></a></div>
+<nav class="lang-en"><a href="./index.html"><img class = "img-lang"
+                                                 src="./icons/russia.svg"
+                                                 role="button" alt="russian"></a></nav>
 </div>
 <div class="hero">
     </div>
