--- a/plans.html
+++ b/plans.html
@@ -17,51 +17,83 @@
         <h2 class="title">Светлана Шаманова</h2>
         <h3 class="subtitle">в поисках работы</h3>
         <hr>
-        <p class="main-text">Я живу в Москве и осваиваю вёрстку.
-        Мне нужен опыт и работы для портфолио, поэтому я с радостью сверстаю для вас landing page
-        за символическую оплату. Я работаю быстро и всегда вовремя отвечаю на
-        сообщения. <a href="./plans.html">Здесь</a> и ниже можно посмотреть, что я уже умею, чему
-        учусь сейчас и чему планирую научиться.</p>
-
-        <h3 class="heading">Навыки и знания</h3>
-        <hr>
-<div>
-        <h3 class="heading-2">Английский язык</h3>
-        <p class="abstract">самостоятельно разбираюсь в документации</p>
-</div>
-<div>
-<h3 class="heading-2">Оконченное высшее образование</h3>
-<p class="abstract">НИУ ВШЭ, психология, бакалавриат, 2016</p>
-</div>
+<h3 class="subtitle"> Навыки и знания</h3>
+<hr>
+<nav class="lang">
+  <a href="index.html"><img class="img-lang" src="./icons/arrows.svg"
+                            role="button"></a></nav>
 <div class="features">
 <div class="feature-card">
-  <img class="feature-icon" src="./icons/browser.svg" aria-hidden="true">
+  <img class="feature-icon" src="./icons/check-brown.svg" aria-hidden="true">
 <div class="feature-caption">
   <h3 class="feature-heading">HTML5 + CSS3</h3>
   <p class="feature-text">Flexbox/CSSGrid/БЭМ</p>
 </div>
 </div>
 <div class="feature-card">
-  <img class="feature-icon" src="./icons/sass.svg" aria-hidden="true">
+  <img class="feature-icon" src="./icons/check-brown.svg" aria-hidden="true">
+<div class="feature-caption">
+  <h3 class="feature-heading">Gulp</h3>
+  <p class="feature-text">менеджер задач</p>
+</div>
+</div>
+<div class="feature-card">
+  <img class="feature-icon" src="./icons/check-brown.svg" aria-hidden="true">
 <div class="feature-caption">
   <h3 class="feature-heading">Sass/Scss</h3>
   <p class="feature-text">препроцессор стилей</p>
 </div>
 </div>
 <div class="feature-card">
-  <img class="feature-icon" src="./icons/gulp.svg" aria-hidden="true">
+  <img class="feature-icon" src="./icons/loading.svg" aria-hidden="true">
+  <div class="feature-caption">
+  <h3 class="feature-heading">JavaScript</h3>
+  <p class="feature-text">basics</p>
+  </div>
+</div>
+<div class="feature-card">
+  <img class="feature-icon" src="./icons/check-brown.svg" aria-hidden="true">
 <div class="feature-caption">
-  <h3 class="feature-heading">Gulp</h3>
-  <p class="feature-text">автоматизатор задач</p>
+  <h3 class="feature-heading">Bulma</h3>
+  <p class="feature-text">CSS-framework</p>
 </div>
 </div>
 <div class="feature-card">
-  <img class="feature-icon" src="./icons/linux.svg" aria-hidden="true">
-  <div class="feature-caption">
+  <img class="feature-icon" src="./icons/loading.svg" aria-hidden="true">
+<div class="feature-caption">
+  <h3 class="feature-heading">React</h3>
+  <p class="feature-text"></p>
+</div>
+</div>
+<div class="feature-card">
+  <img class="feature-icon" src="./icons/check-brown.svg" aria-hidden="true">
+<div class="feature-caption">
+  <h3 class="feature-heading">Fomantic-UI</h3>
+  <p class="feature-text">CSS-framework</p>
+</div>
+</div>
+<div class="feature-card">
+  <img class="feature-icon" src="./icons/loading.svg" aria-hidden="true">
+<div class="feature-caption">
+  <h3 class="feature-heading"></h3>
+  <p class="feature-text"></p>
+</div>
+</div>
+<div class="feature-card">
+  <img class="feature-icon" src="./icons/check-brown.svg" aria-hidden="true">
+<div class="feature-caption">
   <h3 class="feature-heading">Linux</h3>
   <p class="feature-text">Git/Bash/Emacs/Vim</p>
+</div>
+</div>
+<div class="feature-card">
+  <img class="feature-icon" src="./icons/loading.svg" aria-hidden="true">
+  <div class="feature-caption">
+  <h3 class="feature-heading"></h3>
+  <p class="feature-text"></p>
   </div>
 </div>
+
 </div>
 <nav class="social">
   <ul class="social-list">
@@ -78,12 +110,13 @@
         <li class="social-item"><a href=""><img class="social-icon"
         src="./icons/cv.svg" role="button"><p class="link-text">hh.ru</p></a></li>
 </ul></nav>
-<nav class="lang"><a href="./eng.html"><img class = "img-lang"
-                                            src="./icons/united-kingdom.svg"
-                                            role="button" alt="english"></a></nav>
+
+  <nav class="lang">
+  <a href="./eng.html"><img class = "img-lang"
+                                            src="./icons/united-kingdom.svg" role="button"></a></nav>
       </div>
       <div class="hero">
-      </div>
+ </div>
     </div>
   </body>
   </html>
