Publishing attempts continue

--- a/public/eng.html
+++ b/public/eng.html
@@ -37,7 +37,7 @@
   <img class="feature-icon" src="./icons/sass.svg" aria-hidden="true">
 <div class="feature-caption">
   <h3 class="feature-heading">Sass/Scss</h3>
-  <p class="feature-text">styless preprocessor</p>
+  <p class="feature-text">styles preprocessor</p>
 </div>
 </div>
 <div class="feature-card">
