--- a/public/index.html
+++ b/public/index.html
@@ -20,7 +20,7 @@
         <p class="main-text">Я живу в Москве и осваиваю вёрстку.
         Мне нужен опыт и работы для портфолио, поэтому я с радостью сверстаю для вас landing page
         за символическую оплату. Я работаю быстро и всегда вовремя отвечаю на
-        сообщения. <a href="./plans">Здесь</a> и ниже можно посмотреть, что я уже умею, чему
+        сообщения. <a href="./plans.html">Здесь</a> и ниже можно посмотреть, что я уже умею, чему
         учусь сейчас и чему планирую научиться.</p>
 
         <h3 class="heading">Навыки и знания</h3>
@@ -78,7 +78,7 @@
         <li class="social-item"><a href=""><img class="social-icon"
         src="./icons/cv.svg" role="button"><p class="link-text">hh.ru</p></a></li>
 </ul></nav>
-<nav class="lang"><a href="./eng"><img class = "img-lang"
+<nav class="lang"><a href="./eng.html"><img class = "img-lang"
                                             src="./icons/united-kingdom.svg"
                                             role="button" alt="english"></a></nav>
       </div>
