Add redirects to toml file

--- a/public/index.html
+++ b/public/index.html
@@ -79,7 +79,7 @@
         <li class="social-item"><a href=""><img class="social-icon"
         src="./icons/cv.svg" role="button"><p class="link-text">hh.ru</p></a></li>
 </ul></nav>
-<nav class="lang"><a href="./eng.html"><img class = "img-lang"
+<nav class="lang"><a href="./eng"><img class = "img-lang"
                                             src="./icons/united-kingdom.svg"
                                             role="button" alt="english"></a></nav>
       </div>
