Edit the links according to toml redirects

--- a/public/eng.html
+++ b/public/eng.html
@@ -72,7 +72,7 @@
      </ul></nav>
 
 
-<nav class="lang-en"><a href="./index.html"><img class = "img-lang"
+<nav class="lang-en"><a href="./"><img class = "img-lang"
                                                  src="./icons/russia.svg"
                                                  role="button" alt="russian"></a></nav>
 </div>
