--- a/public/index.html
+++ b/public/index.html
@@ -20,8 +20,8 @@
         <p class="main-text">Я живу в Москве и осваиваю вёрстку.
         Мне нужен опыт и работы для портфолио, поэтому я с радостью сверстаю для вас landing page
         за символическую оплату. Я работаю быстро и всегда вовремя отвечаю на
-        сообщения. <a href="./plans.html">Здесь</a> и ниже можно посмотреть, что
-        я уже <a href ="./portfolio-mockup/project/dist/index.html">умею</a>, чему
+        сообщения. <a href="./plans">Здесь</a> и ниже можно посмотреть, что
+        я уже <a href="">умею</a>, чему
         учусь сейчас и чему планирую научиться.</p>
 
         <h3 class="heading">Навыки и знания</h3>
