--- a/public/plans.html
+++ b/public/plans.html
@@ -20,7 +20,7 @@
 <h3 class="subtitle"> Навыки и знания</h3>
 <hr>
 <nav class="lang">
-  <a href="index.html"><img class="img-lang" src="./icons/arrows.svg"
+  <a href="./"><img class="img-lang" src="./icons/arrows.svg"
                             role="button"></a></nav>
 <div class="features">
 <div class="feature-card">
@@ -112,7 +112,7 @@
 </ul></nav>
 
   <nav class="lang">
-  <a href="./eng.html"><img class = "img-lang"
+  <a href="./eng"><img class = "img-lang"
                                             src="./icons/united-kingdom.svg" role="button"></a></nav>
       </div>
       <div class="hero">
