--- a/public/eng.html
+++ b/public/eng.html
@@ -67,7 +67,7 @@
       src="./icons/whatsapp.svg" role="button"><p class="link-text">Whatsapp</p></a></li>
        <li class="social-item"><a href="https://vk.com/light.candy"><img class="social-icon"
        src="./icons/vk.svg" role="button"><p class="link-text">VK</p></a></li>
-        <li class="social-item"><a href=""><img class="social-icon"
+        <li class="social-item"><a href="https://hh.ru/resume/44da175fff0813e8000039ed1f6f3834725946"><img class="social-icon"
         src="./icons/cv.svg" role="button"><p class="link-text">hh.ru</p></a></li>
      </ul></nav>
 
