Improve readability, fix flashes, add portfolio

--- a/public/eng.html
+++ b/public/eng.html
@@ -7,8 +7,7 @@
                                    maximum-scale=1.0">
     <title>Светлана Шаманова</title>
     <link rel="stylesheet" href="sty1.css">
-    <script src="https://kit.fontawesome.com/590808821b.js"
-            crossorigin="anonymous"></script>
+    <link href="https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,300;0,400;0,700;0,900;1,300;1,400;1,700;1,900&family=Open+Sans:ital,wght@0,300;0,400;0,600;0,700;0,800;1,300;1,400;1,600;1,700;1,800&display=swap" rel="stylesheet">
   </head>
   <body>
     <div class="container">
@@ -30,7 +29,7 @@
   <img class="feature-icon" src="./icons/browser.svg" aria-hidden="true">
 <div class="feature-caption">
   <h3 class="feature-heading">HTML5 + CSS3</h3>
-  <p class="feature-text">Flexbox/CSSGrid/BEM</p>
+  <p class="feature-text">Flexbox/CSSGrid</p>
 </div>
 </div>
 <div class="feature-card">
@@ -51,9 +50,27 @@
   <img class="feature-icon" src="./icons/linux.svg" aria-hidden="true">
   <div class="feature-caption">
   <h3 class="feature-heading">Linux</h3>
-  <p class="feature-text">Git/Bash/Emacs/Vim</p>
+  <p class="feature-text">Git/Bash/Emacs</p>
   </div>
 </div>
+</div>
+<h3 class="heading">Portfolio</h3>
+<hr>
+<div class="items">
+<a href="https://digitalvisionsolutions.ru/" class="feature-card">
+  <img class="item-icon" src="./icons/image15.png" aria-hidden="true">
+<div class="feature-caption">
+  <h3 class="feature-heading">Digital Vision Solutions</h3>
+  <p class="feature-text">Landing page for a computer vision start-up</p>
+</div>
+</a>
+<a href="https://modus-versus-33b79e.netlify.app/" class="feature-card">
+  <img class="item-icon" src="./icons/image88.png" aria-hidden="true">
+<div class="feature-caption">
+  <h3 class="feature-heading">Modus Versus</h3>
+  <p class="feature-text">Random psd put to html/css</p>
+</div>
+</a>
 </div>
 <nav class="social">
   <ul class="social-list">
