--- a/public/index.html
+++ b/public/index.html
@@ -7,8 +7,7 @@
                                    maximum-scale=1.0">
     <title>Светлана Шаманова</title>
     <link rel="stylesheet" href="sty1.css">
-    <script src="https://kit.fontawesome.com/590808821b.js"
-            crossorigin="anonymous"></script>
+    <link href="https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,300;0,400;0,700;0,900;1,300;1,400;1,700;1,900&family=Open+Sans:ital,wght@0,300;0,400;0,600;0,700;0,800;1,300;1,400;1,600;1,700;1,800&display=swap" rel="stylesheet">
   </head>
   <body>
     <div class="container">
@@ -18,9 +17,10 @@
         <h3 class="subtitle">в поисках работы</h3>
         <hr>
         <p class="main-text">Я живу в Москве и осваиваю вёрстку.
-        Мне нужен опыт и работы для портфолио, поэтому я с радостью сверстаю для вас landing page
+        Мне нужен опыт и работы для портфолио, поэтому я с радостью сверстаю для
+        вас лэндинг
         за символическую оплату. Я работаю быстро и всегда вовремя отвечаю на
-        сообщения. <a href="./plans">Здесь</a> и ниже можно посмотреть, что
+        сообщения. <a class="inline-link" href="./plans">Здесь</a> и ниже можно посмотреть, что
         я уже <a href="">умею</a>, чему
         учусь сейчас и чему планирую научиться.</p>
 
@@ -60,9 +60,27 @@
   <img class="feature-icon" src="./icons/linux.svg" aria-hidden="true">
   <div class="feature-caption">
   <h3 class="feature-heading">Linux</h3>
-  <p class="feature-text">Git/Bash/Emacs/Vim</p>
+  <p class="feature-text">Git/Bash/Emacs</p>
   </div>
 </div>
+</div>
+<h3 class="heading">Портфолио</h3>
+<hr>
+<div class="items">
+<a href="https://digitalvisionsolutions.ru/" class="feature-card">
+  <img class="item-icon" src="./icons/image15.png" aria-hidden="true">
+<div class="feature-caption">
+  <h3 class="feature-heading">Digital Vision Solutions</h3>
+  <p class="feature-text">Landing page для стартапа в области компьютерного зрения</p>
+</div>
+</a>
+<a href="https://modus-versus-33b79e.netlify.app/" class="feature-card">
+  <img class="item-icon" src="./icons/image88.png" aria-hidden="true">
+<div class="feature-caption">
+  <h3 class="feature-heading">Modus Versus</h3>
+  <p class="feature-text">Сверстала случайный psd-макет</p>
+</div>
+</a>
 </div>
 <nav class="social">
   <ul class="social-list">
