--- a/public/index.html
+++ b/public/index.html
@@ -81,6 +81,13 @@
   <p class="feature-text">Сверстала случайный psd-макет</p>
 </div>
 </a>
+  <a href="https://animation-try-347244.netlify.app/" class="feature-card">
+  <img class="item-icon" src="./icons/image89.png" aria-hidden="true">
+<div class="feature-caption">
+  <h3 class="feature-heading">Social Kallyas</h3>
+  <p class="feature-text">Ещё один случайный psd-макет</p>
+</div>
+</a>
 </div>
 <nav class="social">
   <ul class="social-list">
