--- a/public/index.html
+++ b/public/index.html
@@ -67,7 +67,7 @@
 <h3 class="heading">Портфолио</h3>
 <hr>
 <div class="items">
-<a href="https://digitalvisionsolutions.ru/" class="feature-card">
+<a href="https://unruffled-meninsky-11b127.netlify.app" class="feature-card">
   <img class="item-icon" src="./icons/image15.png" aria-hidden="true">
 <div class="feature-caption">
   <h3 class="feature-heading">Digital Vision Solutions</h3>
